syntax = "proto3";
package user;

option go_package = "api/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  uint64 user_id = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  UserInfo user = 4;
}

message GetUserInfoRequest {
  uint64 user_id = 1;
}

message GetUserInfoResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

message UserInfo {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
}